# sealedbench

./: .env.example  .gitignore  BUILD_PLAN.md  README.md  REFERENCE_IMPLEMENTATION.md  biome.json  package.json  pnpm-lock.yaml  tasklist.md
.github/workflows/: ci.yml
apps/web/: package.json  tsconfig.json  vitest.config.ts
deployments/: testnet.json
deployments/seals/: testnet-v1.json
docs/: DEPLOY-VERCEL.md  VERIFICATION.md  demo-script.md  local-nitro-sealedbench-agent-guide.md  video-narration.md  video-script.md
docs/verify/: current-testnet-artifacts.md
enclave/: Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.prebuilt  Makefile  attestation.json  run.sh  setup-network-proxy.sh  shared-host-switchover.sh
enclave/src/: attestation.rs  evaluate.rs  grade.rs  http_model.rs  lib.rs  main.rs  model_client.rs  payload.rs  seal_client.rs  signing.rs  walrus.rs
fixtures/: seal-vectors.json
fixtures/heldout/: sealedbench-v1.jsonl
move/sealedbench/: Move.toml  (+1 more)
scripts/: assert-enclave-pk-args.test.ts  assert-enclave-pk.ts  demo.ts  evaluate-and-post-args.test.ts  evaluate-and-post.ts  external-gates-preflight.test.ts  external-gates-preflight.ts  fetch-oss-model.test.ts  fetch-oss-model.ts  live-nitro-run.test.ts  live-nitro-run.ts  load-env.test.ts  register-nautilus-enclave-args.test.ts  register-nautilus-enclave.ts  seal-and-notarize.ts  sealed-eval-commitment.test.ts  shared-nitro-switchover.test.ts  tsconfig.json  upgrade-package-args.test.ts  upgrade-package.ts  verify-provenance-args.test.ts  verify-provenance.ts  verify-trace.ts
tools/: demo-model-server.ts  gen-attestation-vectors.ts  gen-enclave-proxy-manifest.test.ts  gen-enclave-proxy-manifest.ts  gen-logo.mjs  gen-seal-vectors.ts  validate_set.ts
(+48 files in other folders)
