[package]
name = "sealedbench-enclave"
version = "0.1.0"
edition = "2021"

[lib]
name = "sealedbench_enclave"
path = "src/lib.rs"

[dependencies]
bcs = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# Nitro NSM attestation is only available inside a Linux Nitro enclave; off-Linux
# the crate builds in local-unattested mode.
[target.'cfg(target_os = "linux")'.dependencies]
aws-nitro-enclaves-nsm-api = "0.4"

[dev-dependencies]
pretty_assertions = "1"
